clean unused DAGs add utils with default_args and VOLUME complete predict_DAG

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,5 +129,11 @@ services:
     image: validate_model
     restart: "no"
 
+  prediction:
+    image: prediction
+    build:
+      context: images/predict
+    restart: 'no'
+
 volumes:
   logs:
