--- a/images/airflow-docker/Dockerfile
+++ b/images/airflow-docker/Dockerfile
@@ -2,6 +2,7 @@ ARG AIRFLOW_BASE_IMAGE="apache/airflow:2.0.0-python3.6"
 FROM ${AIRFLOW_BASE_IMAGE}
 
 RUN pip install --user --no-cache-dir \
+    --proxy http://squid.lvsi.loc:3128 \
     apache-airflow-providers-docker==1.2.0
 
 USER root
