--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,10 @@ x-environment: &airflow_environment
   - AIRFLOW__CORE__STORE_SERIALIZED_DAGS=True
   - AIRFLOW__WEBSERVER__EXPOSE_CONFIG=True
   - AIRFLOW__CORE__FERNET_KEY=${FERNET_KEY}
-
+  - AIRFLOW__SMTP__SMTP_HOST=smtp.gmail.com
+  - AIRFLOW__SMTP__SMTP_PORT=587
+  - AIRFLOW__SMTP__SMTP_USER=${GMAIL_USERNAME}
+  - AIRFLOW__SMTP__SMTP_PASSWORD=${GMAIL_PASSWORD}
 
 x-airflow-image: &airflow_image apache/airflow:2.0.0-python3.6
 # ====================================== /AIRFLOW ENVIRONMENT VARIABLES ======================================
@@ -32,7 +35,16 @@ services:
       - postgres
     environment: *airflow_environment
     entrypoint: /bin/bash
-    command: -c 'airflow db init && airflow users create --username admin --password admin --firstname Anonymous --lastname Admin --role Admin --email admin@example.org'
+    command: >-
+      -c 'airflow db init
+      && airflow users create --username admin
+      --password admin
+      --firstname Anonymous
+      --lastname Admin
+      --role Admin
+      --email admin@example.org
+      && airflow variables set PROD_MODEL_PATH data/model/2021-06-11
+      && airflow connections add fs_default --conn-type fs'
 
   webserver:
     build:
