--- a/images/my_ml_base_image/Dockerfile
+++ b/images/my_ml_base_image/Dockerfile
@@ -2,4 +2,4 @@ FROM python
 
 COPY requirements.txt /requirements.txt
 
-RUN pip install --proxy http://squid.lvsi.loc:3128 -r requirements.txt
+RUN pip install -r requirements.txt
