--- a/images/airflow-ml-base/Dockerfile
+++ b/images/airflow-ml-base/Dockerfile
@@ -2,4 +2,4 @@ FROM python:3.6
 RUN mkdir /build/
 COPY requirements.txt /build/requirements.txt
 
-RUN pip install --proxy http://squid.lvsi.loc:3128 -r /build/requirements.txt
+RUN pip install -r /build/requirements.txt
